[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ConfigureDialog.gd" type="Script" id=1]

[node name="ConfigureDialog" type="PopupDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
popup_exclusive = true
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 1010.0
margin_bottom = 14.0
text = "Configure the bot"
align = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1010.0
margin_bottom = 22.0

[node name="Bot" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 1010.0
margin_bottom = 40.0
text = "Bot"
align = 1

[node name="ReadOnly" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 1010.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/ReadOnly"]
margin_top = 5.0
margin_right = 150.0
margin_bottom = 19.0
rect_min_size = Vector2( 150, 0 )
hint_tooltip = "Allow the bot to connect anonymously.

Won't take effect until the next reconnect."
mouse_filter = 1
text = "Read Only:"

[node name="ReadOnly" type="CheckBox" parent="PanelContainer/VBoxContainer/ReadOnly"]
margin_left = 154.0
margin_right = 504.0
margin_bottom = 24.0
rect_min_size = Vector2( 350, 0 )
text = "(The bot will not be able to send messages)"

[node name="BotName" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 1010.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/BotName"]
margin_top = 5.0
margin_right = 150.0
margin_bottom = 19.0
rect_min_size = Vector2( 150, 0 )
hint_tooltip = "The name of the bot account.

Won't take effect until the next reconnect."
mouse_filter = 1
text = "Bot Name:"

[node name="Name" type="LineEdit" parent="PanelContainer/VBoxContainer/BotName"]
margin_left = 154.0
margin_right = 1010.0
margin_bottom = 24.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
placeholder_text = "Enter bot account name"

[node name="OAuth" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 1010.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/OAuth"]
margin_top = 5.0
margin_right = 150.0
margin_bottom = 19.0
rect_min_size = Vector2( 150, 0 )
hint_tooltip = "The authentification key for the bot account.

Won't take effect until the next reconnect."
mouse_filter = 1
text = "OAuth Key:"

[node name="Key" type="LineEdit" parent="PanelContainer/VBoxContainer/OAuth"]
margin_left = 154.0
margin_right = 1010.0
margin_bottom = 24.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
secret = true
placeholder_text = "Enter bot user key"

[node name="Protocol" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 1010.0
margin_bottom = 148.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Protocol"]
margin_top = 3.0
margin_right = 150.0
margin_bottom = 17.0
rect_min_size = Vector2( 150, 0 )
hint_tooltip = "The protocol the bot should use to connect to Twitch.

Won't take effect until the next reconnect."
mouse_filter = 1
text = "Connection Protocol:"

[node name="Protocol" type="OptionButton" parent="PanelContainer/VBoxContainer/Protocol"]
margin_left = 154.0
margin_right = 1010.0
margin_bottom = 20.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
text = "Websocket"
items = [ "Websocket", null, false, 0, null, "TCP", null, false, 1, null ]
selected = 0

[node name="Channels" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 1010.0
margin_bottom = 176.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Channels"]
margin_top = 5.0
margin_right = 150.0
margin_bottom = 19.0
rect_min_size = Vector2( 150, 0 )
hint_tooltip = "The protocol the bot should use to connect to Twitch.

Won't take effect until the next reconnect."
mouse_filter = 1
text = "Channels:"

[node name="List" type="LineEdit" parent="PanelContainer/VBoxContainer/Channels"]
margin_left = 154.0
margin_right = 1010.0
margin_bottom = 24.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
placeholder_text = "Enter channels to join"

[node name="JoinMessage" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 1010.0
margin_bottom = 204.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/JoinMessage"]
margin_top = 5.0
margin_right = 150.0
margin_bottom = 19.0
rect_min_size = Vector2( 150, 0 )
hint_tooltip = "The protocol the bot should use to connect to Twitch.

Won't take effect until the next reconnect."
mouse_filter = 1
text = "Default Join Message:"

[node name="Message" type="LineEdit" parent="PanelContainer/VBoxContainer/JoinMessage"]
margin_left = 154.0
margin_right = 1010.0
margin_bottom = 24.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
placeholder_text = "Enter join message or leave empty for none"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 1010.0
margin_bottom = 212.0

[node name="Twitch" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 1010.0
margin_bottom = 230.0
text = "Twitch API"
align = 1

[node name="ClientID" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 1010.0
margin_bottom = 258.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/ClientID"]
margin_top = 5.0
margin_right = 150.0
margin_bottom = 19.0
rect_min_size = Vector2( 150, 0 )
hint_tooltip = "Required to manage your Stream Data and Moderation (WIP)"
mouse_filter = 1
text = "App Client ID:"

[node name="ID" type="LineEdit" parent="PanelContainer/VBoxContainer/ClientID"]
margin_left = 154.0
margin_right = 1010.0
margin_bottom = 24.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
secret = true
placeholder_text = "Enter application client ID"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 1010.0
margin_bottom = 266.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 1010.0
margin_bottom = 290.0
custom_constants/separation = 100
alignment = 1

[node name="Save" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 407.0
margin_right = 448.0
margin_bottom = 20.0
text = "Save"

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 548.0
margin_right = 602.0
margin_bottom = 20.0
text = "Cancel"

[connection signal="toggled" from="PanelContainer/VBoxContainer/ReadOnly/ReadOnly" to="." method="_on_ReadOnly_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_Hide_pressed" binds= [ true ]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Hide_pressed" binds= [ false ]]
